@@ -1,3 +1,11 @@
+2009-03-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>
+
+	* Bicho/backends/bg.py: It retrieves changes information
+
+	Changes information is not stored yet. Just the HTML parser
+	which creates a list of changes which will be stored in the future
+
+
 2008-12-22 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>
 
 	* main.py: New option for parsing bugzillas added
@@ -5,6 +13,7 @@
 
 	Given support for bugzilla analysis. So far, basic information
 	is stored in the database. No comments, no changes.
+
 
 2008-12-19 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>
 
